# apollo-mission-simulator

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  NOTICE.md  README.md  build.rs
docs/: architecture-review.html  faults-reference.md
src/: game_state.rs  main.rs  virtual_agc.rs  virtual_agc_shim.c
src/agc/: mod.rs
src/audio/: mod.rs
src/cm_equipment/: mod.rs
src/communications/: mod.rs
src/config/: mod.rs
src/cooling/: mod.rs
src/crew/: mod.rs
src/damage/: mod.rs
src/effects/: mod.rs
src/faults/: mod.rs
src/gn2/: mod.rs
src/lvdc/: mod.rs
src/mission/: mod.rs
src/npc/: context.rs  history.rs  llm.rs  mod.rs
src/panel_wiring/: mod.rs
src/panels/: config.rs  mod.rs
src/physics/: mod.rs
src/planning/: mod.rs
src/sky/: mod.rs
src/solar_system/: mod.rs
src/spacecraft/: mod.rs
src/staging_animation/: mod.rs
src/systems/: csm.rs  ecs.rs  eps.rs  lm.rs  mod.rs  saturn_v.rs  thermal.rs
src/ui/: menu.rs  mod.rs
src/weather/: mod.rs
src/world/: mod.rs
tests/: agc_integration.rs  fault_cascade_tests.rs
