[package]
name = "apollo-mission-simulator"
version = "0.1.0"
edition = "2021"
authors = ["ApolloSim Team"]
description = "3D Apollo Mission Simulator based on original NASA documentation"

[dependencies]
bevy = { version = "0.14", features = ["default", "dynamic_linking", "jpeg", "wav", "flac", "mp3"] }
bevy_egui = "0.29"
nalgebra = "0.33"
chrono = "0.4"
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
rand = "0.8"
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false, optional = true }
tokio = { version = "1", features = ["rt", "sync"], optional = true }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[features]
llm-npcs = ["dep:reqwest", "dep:tokio", "dep:serde", "dep:serde_json"]

[build-dependencies]
cc = "1.0"

[[bin]]
name = "apollo-mim"
path = "src/main.rs"
